@@ -1,3 +1,6 @@
+2017-01-18 (0.12.9)
+	COMMON: clear out of scope CATCH variables
+
 2017-01-14 (0.12.9)
 	COMMON: python style here-document
 
